# GigaBot

./: AppSettings.toml  Cargo.toml  README.md
src/: app_settings.rs  main.rs  mongo.rs  teloxide_telegram.rs
src/models/: conversation.rs  user.rs
